# 3d_design

./: .env  .gitignore  approach_force_close_paths.stl  base.stl  base_base.stl  base_sampler.stl  base_top.stl  clipped_texture.brep  drawer.stl  hex_test.stl  left.stl  main.py  pyproject.toml  right.stl  test_depth_function.py  top.stl  top_sampler.stl
badge/: badge.ipynb
better_bento/: better_bento.ipynb  fan_duct.stl
cam_holder/: cam_adapter.ipynb  cam_adapter.stl  printer_attachment.stl  rod.stl  rod_sample.stl
designs/badge/: badge.stl  glass_ref.stl
designs/calendar/: calendar.py
designs/cam_holder/: camera_mount.stl  sampler.stl
designs/sink_dipper/: aux_dripper.stl  sink_dipper.ipynb
designs/sink_dipper_2/: left.stl  right.stl  sampler.stl  sink_dipper_2.py
designs/soap_dispenser_head/: dispenser_head.ipynb
sink_dipper/: main_dripper.stl  sink_dipper.ipynb
sink_dipper_2/: sink_dipper_2.py
soap_dispenser_head/: dispenser_head.ipynb  head.stl
src/: __init__.py  dbox.py  img_to_stl.py  texture.py  tools.py  workplane.py
src/design_tools/: dbox.py  hex_test.py  merge.py
src/design_tools/texture/: __init__.py  hex.py
src/designs/: calendar.py  hex_test.py
src/dtools/: dbox.py  heatserts.py  hex_test.py  img_tools.py  m_screw.py  parabolic.py  thread.py  workplane.py
src/dtools/texture/: hex.py  tex_details.py
src/texture/: __init__.py  hex.py
